# untangle

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.analyzer  LICENSE  README.md  THIRD-PARTY-NOTICES.md  analyzer-entrypoint.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config.example/: languages.yml  prefixes.yml  systems.yml  untangle.yml
docs/: architecture.md  deployment.md  extending.md  local-development.md  operations.md
examples/: gitlab-ci.yml
src/untangle/: __init__.py  __main__.py  analyze.py  cli.py  clone.py  config.py  drift.py  fswalk.py  graph.py  graph.schema.json  graph_contract.py  patterns.py  report.py  report_schema.py  routes.py  scanner.py  static_config.py  updates.py
src/untangle/parsers/: __init__.py  base.py  docker.py  gitlab_ci.py  nodejs.py  python.py  terraform.py
src/untangle/providers/: __init__.py  base.py  github.py  gitlab.py  static.py
tests/: conftest.py  test_analyze.py  test_cli.py  test_clone.py  test_config.py  test_graph.py  test_patterns.py  test_providers.py  test_report.py  test_routes.py
webapp/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf
webapp/css/: app.css
webapp/fonts/: fonts.css
webapp/js/: app.js  data.js  graph-render.js  themes.js
