[project]
name = "untangle-deps"
version = "0.1.0"
description = "Map and visualize internal dependencies across your git repositories"
license = "MIT"
authors = [{ name = "Ana Filipe", email = "ana@puppybyte.dev" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
untangle = "untangle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/untangle"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long literal lines (regexes, tables, generated-string builders) are clearer unwrapped.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
